lab-7-gke-autopilot/k8s/services/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: k8s-dev
  annotations:
    cloud.google.com/backend-config: '{"default":"api-backendconfig"}'
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
