lab-7-gke-autopilot/k8s/services/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: k8s-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-autopilot-ingress-ip"
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 3000
